--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: MottEnterprises
 description: Skrrt
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://cdn2.scratch.mit.edu/get_image/user/20684082_60x60.png
 
 #
 # Flags below are optional
