--- a/_config.yml
+++ b/_config.yml
@@ -15,21 +15,8 @@ avatar: https://cdn2.scratch.mit.edu/get_image/user/20684082_60x60.png
 # Flags below are optional
 #
 
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: # channel/GoScarce
+
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
