--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: https://cdn2.scratch.mit.edu/get_image/user/20684082_60x60.png
 # Flags below are optional
 #
 
-  youtube: # channel/GoScarce
+  youtube: channel/GoScarce
 
 
 
